--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">主页 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">主页<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">文章列表</a>
@@ -22,6 +22,7 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
             </form>
+            {{ if  not .user }}
             <ul class="navbar-nav ">
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#login-modal">登录</a>
@@ -30,6 +31,13 @@
                     <a class="nav-link" data-toggle="modal" data-target="#register-modal">注册</a>
                 </li>
             </ul>
+            {{ else }}
+            <ul class="navbar-nav ">
+             <li class="nav-item">
+               <a class="nav-link" href="/user/logout">退出</a>
+              </li>
+           </ul>
+            {{ end }}
         </div>
     </nav>
 
