--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -11,13 +11,13 @@
     <script src="statics/js/jquery.min.js" rel="script"></script>
     <script src="statics/js/Popper.js" rel="script"></script>
     <script rel="script" src="statics/js/bootstrap.bundle.js"></script>
-    <title>Gin Hello</title>
+    <title>Gin Hello -用户：{{ .user }}</title>
 </head>
 <body>
 <header>
-    {{template "header"}}
+    {{template "header" .}}
 </header>
-<main>{{ .title }}</main>
+<main>Gin demo</main>
 <ul>
     {{ range .userList }}
          <li>{{ .Username }}  ---> {{ .Email }}</li>
